# FZYC-Mol

./: .dockerignore  .gitignore  CITATION.cff  CODE_AND_DATA_CONTENTS.csv  Dockerfile  FAILURE_AND_EXCLUSION_LOG_INDEX.csv  LICENSE  README.md  SHA256SUMS.txt  VERSION  pyproject.toml  requirements-lock.txt
configs/: candidate_subset_audit.yaml  data_cleaning.yaml  endpoints.yaml  full_moleculenet.json  heterogeneous_pool.yaml  nested_selection.yaml  paper.yaml  reliability.yaml  smoke.json  smoke_multifp.json  strict_core_experts.json  strict_core_resume_sklearn_missing.json  strict_multifp.json  upgrade_fzyc_gt.json  upgrade_graph_transformer.json  wslconfig.autogluon
configs_current/: candidate_registry.yaml  experiment_update.yaml  smoke_ablation.json  smoke_strict_core.json  smoke_upgrade.json  strict_core_fast.json  strict_core_resume_neural_lipo.json  strict_multifp_fast.json  strict_tdc_admet_multifp.json
docs/: release-and-commit.md  reproducibility-scope.md
entrypoints/: full_training_entry.py  quick_reproduce.py
environment/: environment.yml  pyproject.toml  requirements-pretrained.txt  requirements.txt
manifests/: PACKAGE_AUDIT.json  PACKAGE_CONTENTS.csv  data_manifest.csv  dataset_registry.json  endpoint_registry.csv
manuscript_finalization/: build_paper32_figure7_large_text_20260718.py  embed_paper33_tnr_figures_20260718.py  qc_paper33_figure7_20260718.py  restore_paper34_figure7_drawing_20260718.py
paper31_expanded_intervention/: Candidate_pool_expansion_Journal_of_Cheminformatics_manuscript(7).docx  Manuscript_PDF_export_audit.json  (+6 more)
(+827 files in other folders)
